<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/board_screen_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/board_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/board_container"
        android:orientation="vertical">

        <TextView
            android:id="@+id/whoseMoveTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="test" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/blackScoreText"
                android:layout_width="208dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="start"
                android:text="@string/initialBlackScore" />

            <TextView
                android:id="@+id/whiteScoreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="end"
                android:text="@string/initialWhiteScore" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/passTurnButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passTurn" />

            <Button
                android:id="@+id/undoMoveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/undoMoveButton" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>